@@ -7,6 +7,7 @@ Version 2.2.4 - The "don't know yet if there will be another 2.2" version.
 
 	Stu Redman:
 		* Fix crash on global search on Windows
+		* Fix splitter bar position in transfer window not restored properly
 
 	Wuischke:
 		* Add Asturian language
